      now work. (CNY-617)
    * The util.literalRegex() function now escapes parenthesis characters.
      (CNY-630)
    * Manifest files now handle file names containing "%" characters.
      Fix from Pavel Volkovitskiy. (CNY-627)
    * Fixed a bug in migrate that caused its behavior to shift when migrating 
      to the same version that is currently installed.

Changes in 1.0.22:
  o Client Changes:
    * Conary now has hooks for allowing you to be prompted for both name
      and password when necessary.
    * Conary will no longer report a traceback when trying to perform 
      dependency resolution against repositories that are not available.
      Instead, it will print out a warning. (CNY-578)

  o Build Changes:
    * It is now possible to set environment variables to use within
      Conary builds from within conary configuration files, using the
      new "environment" configuration item.  Thanks to Pavel
      Volkovitskiy for implementing this feature. (CNY-592)
    * In previous versions of Conary, calls to r.PackageSpec() would
      improperly override previous calls to r.ComponentSpec(); now
      the ordering is preserved.  Thanks to Pavel Volkovitskiy for 
      this fix. (CNY-613)

  o Bug Fixes:
    * A bug that would allow recursively generated changesets to
      potentially have missing redirect flags has been fixed.
    * A bug in redirect handling when the branch changed but the trove
      name didn't has been fixed - conary will do a better job of
      determining what jobs to perform in this situation. (CNY-599, CNY-602)
    * Errors relating to PGP now just display the error instead of causing 
      conary to traceback. (CNY-591)
    * Conary sync on a locally cooked trove will no longer traceback (CNY-568)
    * --from-file and sync now work together.
    * An AssertionError that was occasionally reached by incorrect repository
      setups is now a ConaryInternalError